[gd_scene load_steps=14 format=3 uid="uid://b3nkakox8f2oh"]

[ext_resource type="Script" uid="uid://dufsetm4cjq6w" path="res://scenes/cutscenes/dialog_overlay.gd" id="1_ik6st"]
[ext_resource type="FontFile" uid="uid://ci08lkimq4d1y" path="res://fonts/IzayoiMonospaced-nwoY.ttf" id="2_5q3ap"]
[ext_resource type="PackedScene" uid="uid://d3fuiykqjxb5h" path="res://scenes/cutscenes/speaker_portrait.tscn" id="3_mj8x4"]
[ext_resource type="Texture2D" uid="uid://4lca2aumdu2g" path="res://sprites/testCursor.png" id="4_m3j4u"]

[sub_resource type="Gradient" id="Gradient_oxt7h"]
offsets = PackedFloat32Array(0.0714286, 0.74026, 0.961039)
colors = PackedColorArray(0.235294, 0.235294, 0.294118, 1, 0.235294, 0.235294, 0.294118, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_2trx7"]
gradient = SubResource("Gradient_oxt7h")
width = 128
height = 128
fill_from = Vector2(1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_j828d"]
line_spacing = 0.0
font = ExtResource("2_5q3ap")
font_size = 32
outline_size = 4
outline_color = Color(0.294118, 0.294118, 0.294118, 1)
shadow_size = 0

[sub_resource type="LabelSettings" id="LabelSettings_o6884"]
line_spacing = 0.0
font = ExtResource("2_5q3ap")
font_size = 22
font_color = Color(1, 1, 0.533333, 1)
outline_size = 4
outline_color = Color(0.294118, 0.294118, 0.294118, 1)
shadow_size = 0

[sub_resource type="LabelSettings" id="LabelSettings_kyiig"]
line_spacing = 12.0
font = ExtResource("2_5q3ap")
font_size = 24

[sub_resource type="Animation" id="Animation_25rj4"]
resource_name = "ContinueBobber"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1273, 674), Vector2(1273, 669), Vector2(1273, 674)]
}

[sub_resource type="Animation" id="Animation_5lwhl"]
resource_name = "ContinueFlasher"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_6fxau"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1273, 669)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qyow0"]
_data = {
&"ContinueBobber": SubResource("Animation_25rj4"),
&"ContinueFlasher": SubResource("Animation_5lwhl"),
&"RESET": SubResource("Animation_6fxau")
}

[node name="DialogOverlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
mouse_filter = 2
script = ExtResource("1_ik6st")

[node name="PortraitsNode" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="SpeakerPortrait" parent="PortraitsNode" instance=ExtResource("3_mj8x4")]
visible = false
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 28.0
offset_top = 324.0
offset_right = 284.0
offset_bottom = 580.0
grow_horizontal = 1
grow_vertical = 1
mouse_filter = 2

[node name="GradientRect" type="TextureRect" parent="."]
layout_mode = 0
offset_top = 500.0
offset_right = 1280.0
offset_bottom = 1005.0
scale = Vector2(1, 0.440001)
mouse_filter = 2
texture = SubResource("GradientTexture2D_2trx7")

[node name="ForegroundElements" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ForegroundElements"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 140.0
offset_top = 523.0
offset_right = 1100.0
offset_bottom = 563.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 13

[node name="NameLabel" type="Label" parent="ForegroundElements/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
text = "XXX"
label_settings = SubResource("LabelSettings_j828d")

[node name="TitleLabel" type="Label" parent="ForegroundElements/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
text = "XXX"
label_settings = SubResource("LabelSettings_o6884")
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="ForegroundElements"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 130.0
offset_top = 557.0
offset_right = 1110.0
offset_bottom = 559.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.589096, 0.589096, 0.589096, 1)

[node name="TextBody" type="Label" parent="ForegroundElements"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 140.0
offset_top = 567.0
offset_right = 1100.0
offset_bottom = 710.0
grow_horizontal = 2
grow_vertical = 2
text = "ABC
DEF
XYZ"
label_settings = SubResource("LabelSettings_kyiig")
autowrap_mode = 1
clip_text = true

[node name="TextStopper" type="TextureRect" parent="."]
visible = false
modulate = Color(1, 0.835294, 0.419608, 1)
layout_mode = 0
offset_left = 1273.0
offset_top = 674.0
offset_right = 1313.0
offset_bottom = 714.0
rotation = 1.5708
mouse_filter = 2
texture = ExtResource("4_m3j4u")

[node name="AnimationPlayer" type="AnimationPlayer" parent="TextStopper"]
libraries = {
&"": SubResource("AnimationLibrary_qyow0")
}
